--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
       <h2>Bibliografia</h2>
       <ul>
         <li>
-          Kernigham, B.W., Ritchie, D.M. (1988)  <strong> The C programming language</strong>. 
-           2nd edition. Prentice Hall Software Series. 
+          Robert Sedgewick, Kevin Wayne, Robert Dondero (2015). <strong>Introduction to Programming in Python: An Interdisciplinary Approach</strong>. 
+          Addison-Wesley Professional.
         </li>
         <li>
           Lewis, H., Papadimitriou, C. (1998) <strong>Elements of the Theory of Computation</strong>. 
@@ -295,10 +295,6 @@
         <li>
           Cormen, T.H., Leiserson, C.E., Rivest, R.L., Stein, C. (2009) <strong> Introduction to Algorithms</strong>. 
           Third Edition. MIT Press
-        </li>
-        <li>
-          Sedgewick, R. (2001) <strong> Algorithms in C, part 5: Graph Algorithms </strong> .
-          Third edition. Addison-Wesley.
         </li>
       </ul>
 
