--- a/index.html
+++ b/index.html
@@ -133,13 +133,13 @@
 
       <h5>Aulas T</h5>
 
-<!--
+
      <table style="width:100%">
         <tr>
-          <td><strong>Sep 19 (09:00 - 11:00)</strong></td>
-          <td>Introduction to the course and its dynamics (<a href="intro.pdf">slides</a>)</td>
+          <td><strong>13 Feb (10:00 - 12:00)</strong></td>
+          <td>Introdução a Técnicas Algorítmicas e Computabilidade (<a href="T_01.pdf" target="_blank" rel="noopener noreferrer">slides</a>)</td>
         </tr>
-        <tr>
+ <!--       <tr>
           <td><strong>Sep 26 (09:00 - 11:00)</strong></td>
           <td>A first glimpse of quantum algorithmics: superposition, quantum interference,
             and Deutsch's algorithm
@@ -190,22 +190,22 @@
           <td> Continuation of the previous lecture 
                   (<a href="qpf.pdf">slides</a>)</td>
         </tr>
-
+-->
 
 
 
 
       </table>
--->
+
       <h5> Aulas TP </h5>
-<!--
+
       <table style="width:100%">
         <tr>
-          <td><strong>Sep 19 (11:00 - 13:00)</strong></td>
-          <td>Algebra of quantum operations (<a href="LectureNotesTP\01 - Algebra of quantum operations\class01.pdf"
+          <td><strong> 13 Fev (15:30 - 17:30)</strong></td>
+          <td>Revisões e Diagnóstico (<a href="TP_01.pdf"
               target="_blank" rel="noopener noreferrer">Exercises 1</a>)</td>
         </tr>
-        <tr>
+ <!--       <tr>
           <td><strong>Sep 26 (11:00 - 13:00)</strong></td>
           <td>Quantum circuit formalism; Quantum projects (<a
               href="LectureNotesTP\02 - Quantum circuit formalism\class02.pdf" target="_blank"
@@ -273,9 +273,9 @@
           <td>Quantum Repetition Code (<a href="LectureNotesTP/13 - Repetition codes/class13.ipynb" target="_blank" 
             rel="noopener noreferrer">Exercises 13</a>)</td>
         </tr>
-
+-->
       </table>
-    -->
+    
       <!--~~~~~~~~~~~~~~~~~~~~~~~-->
       <div id="biblio"></div>
       <h2>Bibliografia</h2>
@@ -337,7 +337,7 @@
       <h5><a name="Avaliação"></a> Avaliação </h5>
       <ul>
         <li>
-          
+         2 Testes Individuais e 1 Trabalho Prático em Grupo
         </li>
       </ul>
       <h5><a name="Contacts"></a> Contact </h5>
