--- a/index.html
+++ b/index.html
@@ -137,15 +137,19 @@
      <table style="width:100%">
         <tr>
           <td><strong>13 Feb (10:00 - 12:00)</strong></td>
-          <td>Introdução a Técnicas Algorítmicas e Computabilidade (<a href="T_01.pdf" target="_blank" rel="noopener noreferrer">slides</a>)</td>
-        </tr>
- <!--       <tr>
-          <td><strong>Sep 26 (09:00 - 11:00)</strong></td>
-          <td>A first glimpse of quantum algorithmics: superposition, quantum interference,
-            and Deutsch's algorithm
-            (<a href="introAlg.pdf">slides</a>)</td>
+          <td>Introdução a Técnicas Algorítmicas e Computabilidade 
+            (<a href="T_01.pdf" target="_blank" rel="noopener noreferrer">slides</a>)</td>
         </tr>
         <tr>
+          <td><strong>20 Fev (10:00 - 12:00)</strong></td>
+          <td>Complexidade  
+            (Análise temporal; 
+            Tamanho do input; Considerações de hardware; 
+            O melhor caso, o pior caso e o caso médio); <br>
+            Análise Assimptótica (Notação Grande-O) <br>
+            (<a href="T_02.pdf" target="_blank" >slides</a>)</td>
+        </tr>
+ <!--       <tr>
           <td><strong>Oct 03 (09:00 - 11:00)</strong></td>
           <td>Continuation of the previous lecture. Basic aspects of entanglement
             (<a href="introEnt.pdf">slides</a>)</td>
@@ -205,10 +209,10 @@
           <td>Revisões e Diagnóstico (<a href="TP_01.pdf"
               target="_blank" rel="noopener noreferrer">Exercises 1</a>)</td>
         </tr>
- <!--       <tr>
-          <td><strong>Sep 26 (11:00 - 13:00)</strong></td>
-          <td>Quantum circuit formalism; Quantum projects (<a
-              href="LectureNotesTP\02 - Quantum circuit formalism\class02.pdf" target="_blank"
+        <tr>
+ <!--         <td><strong>20 Fev (15:30 - 17:30)</strong></td>
+          <td>Complexidade Part 1 (<a
+              href="TP_02.pdf" target="_blank"
               rel="noopener noreferrer"> Exercises 2</a>)</td>
         </tr>
         <tr>
