--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
               target="_blank" rel="noopener noreferrer">Exercises 1</a>)</td>
         </tr>
         <tr>
- <!--         <td><strong>20 Fev (15:30 - 17:30)</strong></td>
+          <td><strong>20 Fev (15:30 - 17:30)</strong></td>
           <td>Complexidade Part 1 (<a
               href="TP_02.pdf" target="_blank"
               rel="noopener noreferrer"> Exercises 2</a>)</td>
         </tr>
-        <tr>
+  <!--      <tr>
           <td><strong>Oct 3 (11:00-13:00)</strong></td>
           <td>Quantum Operations and Simulations in Qiskit (<a href="LectureNotesTP\03 - Qiskit Intro\class03.ipynb"
               target="_blank" rel="noopener noreferrer"> Exercises 3</a>)</td>
