--- a/index.html
+++ b/index.html
@@ -149,12 +149,14 @@
             Análise Assimptótica (Notação Grande-O) <br>
             (<a href="T_02.pdf" target="_blank" >slides</a>)</td>
         </tr>
- <!--       <tr>
-          <td><strong>Oct 03 (09:00 - 11:00)</strong></td>
-          <td>Continuation of the previous lecture. Basic aspects of entanglement
-            (<a href="introEnt.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>27 Fev (10:00 - 12:00)</strong></td>
+          <td>Revisão da aula anterior; <br>
+            Definições recursivas
+            Análise amortizada
+            (<a href="T_03.pdf">slides</a>)</td>
+        </tr>
+  <!--      <tr>
           <td><strong>Oct 10 (09:00 - 11:00)</strong></td>
           <td> Continuation of the previous lecture. Quantum teleportation
             (<a href="introEnt.pdf">slides</a>)</td>
@@ -211,16 +213,17 @@
         </tr>
         <tr>
           <td><strong>20 Fev (15:30 - 17:30)</strong></td>
-          <td>Complexidade Part 1 (<a
+          <td>Complexidade Parte 1 (<a
               href="TP_02.pdf" target="_blank"
               rel="noopener noreferrer"> Exercises 2</a>)</td>
         </tr>
-  <!--      <tr>
-          <td><strong>Oct 3 (11:00-13:00)</strong></td>
-          <td>Quantum Operations and Simulations in Qiskit (<a href="LectureNotesTP\03 - Qiskit Intro\class03.ipynb"
+        <tr>
+          <td><strong>27 Fev (14:00-16:00)</strong></td>
+          <td>Complexidade Parte 2 (<a 
+              href="TP_03.pdf"
               target="_blank" rel="noopener noreferrer"> Exercises 3</a>)</td>
         </tr>
-        <tr>
+   <!--     <tr>
           <td><strong>Oct 10 (11:00-13:00)</strong></td>
           <td>IBM Q and Superdense Coding (<a href="LectureNotesTP\04 - IBMQ and Dense Coding\class04.ipynb"
               target="_blank" rel="noopener noreferrer">Exercises 4</a>)</td>
