--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
 
       <ul>
         <li>
-          Dúvidas - Ana: Qua, 10:00-12:00
+          Dúvidas: Qua, 10:00-12:00 (<strong>Online</strong>)<br>
+          ou Seg, 9:00-10:00 (<strong>Presencial</strong>)
         </li>
         <li>
           Email - Ana: ana dot i dot neri at inesctec dot pt
