--- a/index.html
+++ b/index.html
@@ -156,12 +156,13 @@
             Análise amortizada
             (<a href="T_03.pdf">slides</a>)</td>
         </tr>
-  <!--      <tr>
-          <td><strong>Oct 10 (09:00 - 11:00)</strong></td>
-          <td> Continuation of the previous lecture. Quantum teleportation
-            (<a href="introEnt.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>6 Mar (10:00 - 12:00)</strong></td>
+          <td>Revisão da aula anterior;<br>
+            Análise amortizada: análise agregada, método contabilístico, método potencial, tabelas dinâmicas.
+            (<a href="T_04.pdf">slides</a>)</td>
+        </tr>
+ <!--       <tr>
           <td><strong>Oct 17 (09:00 - 11:00)</strong></td>
           <td> The phase kickback effect. Bernstein-Vazirani's algorithm and Deutsch-Josza's algorithm
             (<a href="expSep.pdf">slides</a>)</td>
@@ -223,12 +224,13 @@
               href="TP_03.pdf"
               target="_blank" rel="noopener noreferrer"> Exercises 3</a>)</td>
         </tr>
-   <!--     <tr>
-          <td><strong>Oct 10 (11:00-13:00)</strong></td>
-          <td>IBM Q and Superdense Coding (<a href="LectureNotesTP\04 - IBMQ and Dense Coding\class04.ipynb"
+       <tr>
+          <td><strong>6 Mar (15:30-17:30)</strong></td>
+          <td>Complexidade Parte 3 (<a 
+              href="TP_04.pdf"
               target="_blank" rel="noopener noreferrer">Exercises 4</a>)</td>
         </tr>
-        <tr>
+ <!--        <tr>
           <td><strong>Oct 24 (09:00-11:00)</strong></td>
           <td>The Deutsch-Jozsa Algorithm; Simulate Real Devices(<a
               href="LectureNotesTP/05 - Deutsch-Jozsa/class05.ipynb" target="_blank" rel="noopener noreferrer">Exercises
