aulas 13 de março

--- a/index.html
+++ b/index.html
@@ -162,12 +162,11 @@
             Análise amortizada: análise agregada, método contabilístico, método potencial, tabelas dinâmicas.
             (<a href="T_04.pdf">slides</a>)</td>
         </tr>
- <!--       <tr>
-          <td><strong>Oct 17 (09:00 - 11:00)</strong></td>
-          <td> The phase kickback effect. Bernstein-Vazirani's algorithm and Deutsch-Josza's algorithm
-            (<a href="expSep.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>13 Mar (10:00 - 12:00)</strong></td>
+          <td> Revisões e preparação para o teste.</td>
+        </tr>
+  <!--      <tr>
           <td><strong>Oct 24 (11:00 - 13:00)</strong></td>
           <td> Simon's algorithm
             (<a href="expSep.pdf">slides</a>)</td>
@@ -230,13 +229,11 @@
               href="TP_04.pdf"
               target="_blank" rel="noopener noreferrer">Exercises 4</a>)</td>
         </tr>
- <!--        <tr>
-          <td><strong>Oct 24 (09:00-11:00)</strong></td>
-          <td>The Deutsch-Jozsa Algorithm; Simulate Real Devices(<a
-              href="LectureNotesTP/05 - Deutsch-Jozsa/class05.ipynb" target="_blank" rel="noopener noreferrer">Exercises
-              5</a>)</td>
+         <tr>
+          <td><strong>13 Mar (15:30-17:30)</strong></td>
+          <td>Revisões e preparação para o teste</td>
         </tr>
-        <tr>
+ <!--       <tr>
           <td><strong>Oct 31 (09:00-11:00)</strong></td>
           <td>Bernstein-Vazirani Algorithm; Measurement Errors Mitigation (<a
               href="LectureNotesTP/06 - Bernstein-Vazirani/class06.ipynb" target="_blank"
