--- a/index.html
+++ b/index.html
@@ -215,13 +215,17 @@
           <td><strong>20 Fev (15:30 - 17:30)</strong></td>
           <td>Complexidade Parte 1 (<a
               href="TP_02.pdf" target="_blank"
-              rel="noopener noreferrer"> Exercises 2</a>)</td>
+              rel="noopener noreferrer"> Exercises 2</a>) - 
+              <a href="TP_02_wSol.pdf" target="_blank"
+              rel="noopener noreferrer"> soluções</a></td>
         </tr>
         <tr>
           <td><strong>27 Fev (14:00-16:00)</strong></td>
           <td>Complexidade Parte 2 (<a 
               href="TP_03.pdf"
-              target="_blank" rel="noopener noreferrer"> Exercises 3</a>)</td>
+              target="_blank" rel="noopener noreferrer"> Exercises 3</a>) - 
+              <a href="TP_03_wSol.pdf" target="_blank"
+              rel="noopener noreferrer"> soluções</a></td>
         </tr>
        <tr>
           <td><strong>6 Mar (15:30-17:30)</strong></td>
