--- a/index.html
+++ b/index.html
@@ -166,12 +166,11 @@
           <td><strong>13 Mar (10:00 - 12:00)</strong></td>
           <td> Revisões e preparação para o teste.</td>
         </tr>
-  <!--      <tr>
-          <td><strong>Oct 24 (11:00 - 13:00)</strong></td>
-          <td> Simon's algorithm
-            (<a href="expSep.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>20 Mar (10:00 - 12:00)</strong></td>
+          <td> Teste</td>
+        </tr>
+  <!--      <tr>
           <td><strong>Nov 07 (09:00-11:00)</strong></td>
           <td> Grover's algorithm (<a href="grover.pdf">slides</a>)</td>
         </tr>
@@ -237,13 +236,14 @@
           <td><strong>13 Mar (15:30-17:30)</strong></td>
           <td>Revisões e preparação para o teste</td>
         </tr>
- <!--       <tr>
-          <td><strong>Oct 31 (09:00-11:00)</strong></td>
-          <td>Bernstein-Vazirani Algorithm; Measurement Errors Mitigation (<a
-              href="LectureNotesTP/06 - Bernstein-Vazirani/class06.ipynb" target="_blank"
-              rel="noopener noreferrer">Exercises 6</a>)</td>
-        </tr>
         <tr>
+          <td><strong>20 Mar (15:30-17:30)</strong></td>
+          <td>
+            Classes (<a
+              href="T_05.pdf" target="_blank"
+              rel="noopener noreferrer">Slides</a>)</td>
+        </tr>
+  <!--      <tr>
           <td><strong>Oct 31 (11:00-13:00)</strong></td>
           <td>Simon's Algorithm; C<sup>n</sup>NOT decomposition (<a href="LectureNotesTP/07 - Simon/class07.ipynb"
               target="_blank" rel="noopener noreferrer">Exercises 7</a>)</td>
