--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
           <td><strong>20 Mar (10:00 - 12:00)</strong></td>
           <td> Teste</td>
         </tr>
-  <!--      <tr>
-          <td><strong>Nov 07 (09:00-11:00)</strong></td>
-          <td> Grover's algorithm (<a href="grover.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>17 Abr (10:00-12:00)</strong></td>
+          <td> Estruturas (Conjuntos e Multi-conjuntos; Sequências; Buffers ) (<a href="T_06.pdf">slides</a>)</td>
+        </tr>
+   <!--     <tr>
           <td><strong>Nov 14 (09:00-11:00)</strong></td>
           <td> Grover's algorithm from a geometrical perspective. Grover's algorithm
                   with multiple solutions (<a href="grover.pdf">slides</a>)</td>
@@ -243,12 +243,12 @@
               href="T_05.pdf" target="_blank"
               rel="noopener noreferrer">Slides</a>)</td>
         </tr>
-  <!--      <tr>
-          <td><strong>Oct 31 (11:00-13:00)</strong></td>
-          <td>Simon's Algorithm; C<sup>n</sup>NOT decomposition (<a href="LectureNotesTP/07 - Simon/class07.ipynb"
-              target="_blank" rel="noopener noreferrer">Exercises 7</a>)</td>
-        </tr>
         <tr>
+          <td><strong>17 Abr (15:30-17:30)</strong></td>
+          <td>Estruturas (<a href="TP_06.pdf"
+              target="_blank" rel="noopener noreferrer">Exercícios 5</a>)</td>
+        </tr>
+    <!--    <tr>
           <td><strong>Nov 07 (11:00-13:00)</strong></td>
           <td>Grover's Algorithm (<a href="LectureNotesTP/08 - Grover/class08.zip" target="_blank"
               rel="noopener noreferrer">Exercises 8</a>)</td>
