--- a/index.html
+++ b/index.html
@@ -174,12 +174,11 @@
           <td><strong>17 Abr (10:00-12:00)</strong></td>
           <td> Estruturas (Conjuntos e Multi-conjuntos; Sequências; Buffers ) (<a href="T_06.pdf">slides</a>)</td>
         </tr>
-   <!--     <tr>
-          <td><strong>Nov 14 (09:00-11:00)</strong></td>
-          <td> Grover's algorithm from a geometrical perspective. Grover's algorithm
-                  with multiple solutions (<a href="grover.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>24 Abr (10:00-12:00)</strong></td>
+          <td> Estruturas (dicionários) e Grafos (Introdução e Consultas) (<a href="T_07.pdf">slides</a>)</td>
+        </tr>
+    <!--    <tr>
           <td><strong>Nov 21 (09:00-11:00)</strong></td>
           <td> The basics of the Quantum Fourier Transform. Introduction to Quantum Phase
                   Estimation (<a href="qpe.pdf">slides</a>)</td>
@@ -248,12 +247,12 @@
           <td>Estruturas (<a href="TP_06.pdf"
               target="_blank" rel="noopener noreferrer">Exercícios 5</a>)</td>
         </tr>
-    <!--    <tr>
-          <td><strong>Nov 07 (11:00-13:00)</strong></td>
-          <td>Grover's Algorithm (<a href="LectureNotesTP/08 - Grover/class08.zip" target="_blank"
-              rel="noopener noreferrer">Exercises 8</a>)</td>
-        </tr>
         <tr>
+          <td><strong>24 de Abr (15:30-17:30)</strong></td>
+          <td>Estruturas e Grafos (<a href="TP_07.pdf" target="_blank"
+              rel="noopener noreferrer">Exercises 6</a>)</td>
+        </tr>
+     <!--   <tr>
           <td><strong>Nov 14 (11:00-13:00)</strong></td>
           <td>Grover's Algorithm - Part 2 (<a href="LectureNotesTP/09 - Grover2/class09.ipynb" target="_blank" 
               rel="noopener noreferrer">Exercises 9</a>)</td>
