--- a/index.html
+++ b/index.html
@@ -178,12 +178,11 @@
           <td><strong>24 Abr (10:00-12:00)</strong></td>
           <td> Estruturas (dicionários) e Grafos (Introdução e Consultas) (<a href="T_07.pdf">slides</a>)</td>
         </tr>
-    <!--    <tr>
-          <td><strong>Nov 21 (09:00-11:00)</strong></td>
-          <td> The basics of the Quantum Fourier Transform. Introduction to Quantum Phase
-                  Estimation (<a href="qpe.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>8 Mai (10:00-12:00)</strong></td>
+          <td>  Revisões e preparação para o teste.</td>
+        </tr>
+     <!--   <tr>
           <td><strong>Nov 28 (09:00-11:00)</strong></td>
           <td> Continuation of the previous lecture. Performance of Quantum Phase Estimation.
                   Introduction to the problem of order-finding
@@ -248,16 +247,15 @@
               target="_blank" rel="noopener noreferrer">Exercícios 5</a>)</td>
         </tr>
         <tr>
-          <td><strong>24 de Abr (15:30-17:30)</strong></td>
+          <td><strong>24 Abr (15:30-17:30)</strong></td>
           <td>Estruturas e Grafos (<a href="TP_07.pdf" target="_blank"
               rel="noopener noreferrer">Exercises 6</a>)</td>
         </tr>
-     <!--   <tr>
-          <td><strong>Nov 14 (11:00-13:00)</strong></td>
-          <td>Grover's Algorithm - Part 2 (<a href="LectureNotesTP/09 - Grover2/class09.ipynb" target="_blank" 
-              rel="noopener noreferrer">Exercises 9</a>)</td>
-        </tr>
         <tr>
+          <td><strong>8 Mai (15:30-17:30)</strong></td>
+          <td>Revisões e preparação para o teste</td>
+        </tr>
+      <!--  <tr>
           <td><strong>Nov 21 (11:00-13:00) </strong></td>
           <td>QFT and QPE (<a href="LectureNotesTP/10 - QFT + QPE/class10.ipynb" target="_blank"
             rel="noopener noreferrer">Exercises 10</a>)</td>
