update trabalho final

--- a/index.html
+++ b/index.html
@@ -182,13 +182,11 @@
           <td><strong>8 Mai (10:00-12:00)</strong></td>
           <td>  Revisões e preparação para o teste.</td>
         </tr>
-     <!--   <tr>
-          <td><strong>Nov 28 (09:00-11:00)</strong></td>
-          <td> Continuation of the previous lecture. Performance of Quantum Phase Estimation.
-                  Introduction to the problem of order-finding
-                  (<a href="qpf.pdf">slides</a>)</td>
-        </tr>
         <tr>
+          <td><strong>15 Mai (10:00-12:00)</strong></td>
+          <td> Teste </td>
+        </tr>
+      <!--  <tr>
           <td><strong>Dez 05 (09:00-11:00)</strong></td>
           <td> Continuation of the previous lecture 
                   (<a href="qpf.pdf">slides</a>)</td>
@@ -255,12 +253,12 @@
           <td><strong>8 Mai (15:30-17:30)</strong></td>
           <td>Revisões e preparação para o teste</td>
         </tr>
-      <!--  <tr>
-          <td><strong>Nov 21 (11:00-13:00) </strong></td>
-          <td>QFT and QPE (<a href="LectureNotesTP/10 - QFT + QPE/class10.ipynb" target="_blank"
-            rel="noopener noreferrer">Exercises 10</a>)</td>
-        </tr>
         <tr>
+          <td><strong>15 Mai (15:30-17:30) </strong></td>
+          <td>Apresentação de trabalho de grupo (<a href="Trabalho_final.pdf" target="_blank"
+            rel="noopener noreferrer">Trabalho Final</a>)</td>
+        </tr>
+      <!--  <tr>
           <td><strong>Nov 28 (11:00-13:00)</strong></td>
           <td>QPE + QPF (<a href="LectureNotesTP/11 - QPE + QPF/class11.ipynb" target="_blank"
             rel="noopener noreferrer">Exercises 11</a>)</td>
